Move omniauth configuration to config/application.yml

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -32,6 +32,13 @@ development: &development
   # Allow user and company creation?
   contact_creation_allowed: <%= contact_creation %>
 
+  # Users can sign up/in via various oauth providers
+  # omniauth:
+  #   fluenta:
+  #     app_id: 123
+  #     secret: 456
+  #     site:   http://oauth.site.com
+
 test:
   <<: *development
 
