Display scm changeset informations on task page when it enabled application wide
If you want to set it to hide the commits tab on task page, please update the
application.yml, and set the `use_scm_activities: true` to `false`

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -31,6 +31,8 @@ development: &development
 
   # Allow user and company creation?
   contact_creation_allowed: <%= contact_creation %>
+  # Display the SCM changes
+  use_scm_activities: true
 
   # Users can sign up/in via various oauth providers
   # omniauth:
